--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
     "start": "nuxt start"
   },
   "dependencies": {
-    "nuxt": "^2.15.7"
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/sentry": "^5.1.0",
+    "@nuxtjs/style-resources": "^1.2.0",
+    "nuxt": "^2.15.7",
+    "sass": "^1.35.2",
+    "sass-loader": "^12.1.0"
+  },
+  "devDependencies": {
+    "@nuxtjs/svg": "^0.1.12"
   }
 }
