--- a/package.json
+++ b/package.json
@@ -4,17 +4,27 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "generate": "nuxt generate",
-    "start": "nuxt start"
+    "start": "nuxt start",
+    "lint": "eslint --ext .ts,.js,.vue ."
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/firebase": "^7.6.1",
     "@nuxtjs/sentry": "^5.1.0",
     "@nuxtjs/style-resources": "^1.2.0",
+    "bulma": "^0.9.3",
+    "firebase": "^8.7.1",
     "nuxt": "^2.15.7",
     "sass": "^1.35.2",
-    "sass-loader": "^12.1.0"
+    "sass-loader": "10"
   },
   "devDependencies": {
-    "@nuxtjs/svg": "^0.1.12"
+    "@nuxt/types": "^2.15.7",
+    "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/svg": "^0.1.12",
+    "eslint": "^7.31.0",
+    "fibers": "^5.0.0",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0"
   }
 }
