--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@nuxtjs/style-resources": "^1.2.0",
     "bulma": "^0.9.3",
     "firebase": "^8.7.1",
+    "leaflet": "^1.7.1",
     "nuxt": "^2.15.7",
     "sass": "^1.35.2",
-    "sass-loader": "10"
+    "sass-loader": "10",
+    "vue2-leaflet": "^2.7.1",
+    "vue2-leaflet-markercluster": "^3.1.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.7",
