--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "generate": "nuxt generate",
-    "start": "nuxt start",
-    "lint": "eslint --ext .ts,.js,.vue ."
+    "analyze": "nuxt build --modern --analyze",
+    "generate": "nuxt generate --modern",
+    "start": "nuxt start"
   },
   "dependencies": {
+    "@nuxt/image": "^0.6.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/firebase": "^7.6.1",
     "@nuxtjs/sentry": "^5.1.0",
@@ -18,6 +19,7 @@
     "nuxt": "^2.15.7",
     "sass": "^1.35.2",
     "sass-loader": "10",
+    "typopo": "^2.5.2",
     "vue2-leaflet": "^2.7.1",
     "vue2-leaflet-markercluster": "^3.1.0"
   },
