--- a/package.json
+++ b/package.json
@@ -10,20 +10,11 @@
   "dependencies": {
     "@nuxt/image": "^0.6.0",
     "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/cloudinary": "^1.0.3",
-    "@nuxtjs/firebase": "^7.6.1",
     "@nuxtjs/sentry": "^5.1.0",
     "@nuxtjs/style-resources": "^1.2.0",
     "bulma": "^0.9.3",
-    "fibers": "^5.0.0",
-    "firebase": "^8.7.1",
-    "latinize": "^0.5.0",
     "leaflet": "^1.7.1",
     "nuxt": "^2.15.7",
-    "sass": "^1.35.2",
-    "sass-loader": "10",
-    "slugify": "^1.6.2",
-    "typopo": "^2.5.2",
     "vue2-leaflet": "^2.7.1",
     "vue2-leaflet-markercluster": "^3.1.0"
   },
@@ -32,6 +23,15 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/svg": "^0.1.12",
     "eslint": "^7.31.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
+    "sass": "^1.35.2",
+    "sass-loader": "10",
+    "fibers": "^5.0.0",
+    "firebase": "^8.7.1",
+    "latinize": "^0.5.0",
+    "@nuxtjs/firebase": "^7.6.1",
+    "slugify": "^1.6.2",
+    "typopo": "^2.5.2"
   }
 }
