--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/sentry": "^5.1.0",
     "@nuxtjs/style-resources": "^1.2.0",
+    "@nuxtjs/vercel-builder": "^0.22.1",
     "bulma": "^0.9.3",
     "leaflet": "^1.7.1",
     "nuxt": "^2.15.7",
