--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "vercel-build": "yarn global add node-gyp sharp"
   },
   "dependencies": {
-    "@nuxt/image": "^0.6.0",
+    "@nuxt/image": "^0.4.17e",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/sentry": "^5.1.0",
     "@nuxtjs/style-resources": "^1.2.0",
