--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
     "build": "nuxt build",
     "analyze": "nuxt build --modern --analyze",
     "generate": "nuxt generate",
-    "start": "nuxt start",
-    "vercel-build": "yarn global add node-gyp sharp prebuild-install"
+    "start": "nuxt start"
   },
   "dependencies": {
     "@nuxt/image": "^0.4.17e",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/sentry": "^5.1.0",
     "@nuxtjs/style-resources": "^1.2.0",
-    "@nuxtjs/vercel-builder": "^0.22.1",
     "bulma": "^0.9.3",
     "leaflet": "^1.7.1",
     "nuxt": "^2.15.7",
