--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "nuxt build",
     "analyze": "nuxt build --modern --analyze",
     "generate": "nuxt generate",
-    "start": "nuxt start"
+    "start": "nuxt start",
+    "update": "npx browserslist@latest --update-db"
   },
   "dependencies": {
     "@nuxt/image": "^0.4.17e",
@@ -24,7 +25,6 @@
     "@nuxtjs/firebase": "^7.6.1",
     "@nuxtjs/svg": "^0.1.12",
     "eslint": "^7.31.0",
-    "fibers": "^5.0.0",
     "firebase": "^8.7.1",
     "latinize": "^0.5.0",
     "pug": "^3.0.2",
